Changed from font awesome to image as user icon. Added font awesome basta logo. Removed double border in history view. Fixed navigation back to main page when clicking on brand logo

--- a/frontend/src/js/containers/history/history.less
+++ b/frontend/src/js/containers/history/history.less
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: auto 100px;
   grid-template-areas: 'page-header order-counter';
-  border-bottom: 1px solid @border-color;
+  //border-bottom: 1px solid @border-color;
   height: 84px;
   margin-bottom: 18px;
 }
