--- a/frontend/src/js/containers/navMenu/navMenu.less
+++ b/frontend/src/js/containers/navMenu/navMenu.less
@@ -89,6 +89,7 @@
 .navMenuRight {
   display: inline-block;
   float: right;
+  width: 300px;
 }
 .mobileMenu {
   display: none;
